feat: add grad
